# iqpopt

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/iqpopt/: __init__.py  iqp_optimizer.py  training.py  utils.py
src/iqpopt/gen_qml/: __init__.py  iqp_methods.py  sample_methods.py  utils.py
tests/: pennylane_functions.py  test_mmd.py  test_mmd_bitflip.py
tests/tests_source/: test_source.py  test_source_config.py  test_source_results.csv
