[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iqpopt"
description = "IQP circuit simulation"
version = "2024.7.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "jax",
  "cvxpy",
  "pennylane",
  "scipy",
  "jaxopt",
  "optax",
  "tqdm",
  "matplotlib",
  "pandas",
  "numpyro"
]
readme = "README.md"
license = {file = "LICENSE"}